# consolida-emergencia

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml  flow.bat  migrate.bat  run.bat  send.bat  test.http
backend/: .coverage  .dockerignore  pyproject.toml
backend/app/: cron.py  crud.py  main.py  models.py
backend/app/alembic/versions/: 013857051b78_add_portal_fields_to_solicitacao.py  183871aa523c_add_created_at_and_updated_at_to_.py  4ddd90d57fc9_initial_tables.py  4ec26f37fdb7_add_evento_table.py  9a0c42b24f4b_add_solicitacao_table.py  ac05b85c4e38_add_kpi_table.py  c531e17d519d_merge_heads.py  f824054c5b79_.py  ff47bdcebf3e_add_slug_to_api_key.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: api_keys.py  data.py  kpis.py  login.py  private.py  robo_whatsapp.py  users.py  utils.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  middleware.py
backend/app/schemas/: normalized.py
backend/app/scrapers/: __init__.py  ajuda_emjf.py  ajuda_imediata.py  ajuda_jf_arctei.py  ajude_io.py  ajude_jf.py  ajude_juiz_de_fora.py  base.py  cidade_que_cuida.py  conta_publica.py  emergencia_mg.py  interdicoes_jf.py  mi_au_ajuda.py  minas_emergencia.py  normalizer.py  onde_doar.py  sos_animais_mg.py  sos_minas_growberry.py  sos_ser_luz_jf.py  sosjf_online.py  sosjf_org.py  unidos_por_jf.py  zona_da_mata_alertas.py
backend/app/scrapers/normalizers/: __init__.py  ajuda_emjf.py  (+20 more)
backend/app/services/: data_service.py
backend/app/workers/: scraper_worker.py
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_data_routes.py  test_eventos_routes.py  test_health.py  test_kpis_routes.py  test_normalizer.py  test_scraper_worker.py  test_scrapers.py  test_users.py
(+1 files in other folders)
