[project]
name = "sos-jf"
version = "0.1.0"
description = "SOS-JF Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "pydantic>2.0",
    "alembic>=1.12.1,<2.0.0",
    "httpx>=0.25.1,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "coverage>=7.4.3,<8.0.0",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
    "T201",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/data.py" = ["ARG001"]
"app/main.py" = ["ARG001"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
